--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+* {
+  margin: 0;
+}
+
 .App {
   text-align: center;
+
 }
 
 .App-logo {
@@ -32,6 +37,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
